# serial-bench

./: Cargo.toml  README.md  build.rs
benches/: serialization.rs
src/: data.fbs  data.proto  flat_data.rs  lib.rs  proto_data.rs
