[package]
name = "serial-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
rmp-serde = "1.3.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
prost = "0.14.1"
flatbuffers = "24.3.25"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
prost-build = "0.14"

[[bench]]
name = "serialization"
harness = false
